--- a/404Template.css
+++ b/404Template.css
@@ -64,21 +64,30 @@ p {
     float: left;
     height: 10%;
     width: 4%;
-    margin-left: 40%;
+
 }
     
 .goBack {
     margin-top: 10%;
     width: 100%;
+    float: right;
+    margin-right: 40%;
 }
 
 .goBackText {
     color: rgb(150,0,0);
     font-size: 200%;
     text-decoration: none;
+    float: right;
 }
 
 a:hover, a:visited, a:link, a:active {
     text-decoration: none;
     color: rgb(150,0,0);
+}
+
+.backImage {
+    height: 15pt;
+    float: right;
+    margin-top: 6pt;
 }
