--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -54,9 +54,9 @@ body {
     margin-top: 2%;
     margin-left: 5%;
 */
-/*    font-family: "HelveticaNeue";*/
+    font-family: "HelveticaNeue";
     font-size: 200%;
-/*    color: white;*/
+    color: white;
 }
 
 .cText {
