--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -50,7 +50,7 @@ body {
 }
 
 .cTitel {
-    font-size: 200%;
+    font-size: large;
     color: white;
     font-family: "HelveticaNeue";
     margin-top: 2%;
