--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -53,7 +53,7 @@ body {
     font-size: large;
     color: white;
     font-family: "HelveticaNeue";
-    margin-top: 2%;
+/*    margin-top: 2%;*/
     margin-left: 5%;
 }
 
