Trying to fix feature list

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -90,7 +90,8 @@ body {
 
 ul#features {
     list-style-type: none;
-    margin-left: 3%;
+    padding-left: 3%;
+    font-family: "Helvetica";
 }
 
 
