Trying to fix featurelist
Stepped from list to <br>

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -89,9 +89,13 @@ body {
 
 
 #features {
-    list-style-type: none;
     padding-left: 6%;
     font-family: "Helvetica";
+    list-style-type: none;
+}
+
+li {
+    
 }
 
 
