Trying to fix font-size MK2

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -116,7 +116,7 @@ li {
     color: white;
     float: left;
     font-family: "HelveticaNeue-light";
-    font-size: x-large;
+    font-size: 25px;
     margin-right: 8%;
 }
 
