--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -115,7 +115,7 @@ li {
 .bottomItem {
     color: white;
     float: left;
-    font-family: "HelveticaNeue-light";
+    font-family: "HelveticaNeue";
     font-size: 25px;
     margin-right: 8%;
 }
