Trying to fix font-size MK4

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -116,7 +116,7 @@ li {
     color: white;
     float: left;
     font-family: "HelveticaNeue";
-    font-size: 25px;
+    font-size: xx-large;
     margin-right: 8%;
 }
 
