--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -114,9 +114,9 @@ li {
 }
 .bottomItem {
     color: white;
-    float: left;
-    font-family: "HelveticaNeue-light";
-    font-size: 2em;
+/*    float: left;*/
+    font-family: "HelveticaNeue";
+    font-size: xx-large;
     margin-right: 8%;
 }
 
