Trying to fix font-size MK9 Padding, you are my last hope

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -117,7 +117,7 @@ li {
     color: white;
 /*    float: left;*/
     font-family: "HelveticaNeue";
-    margin-right: 8%;
+    padding-right: 8%;
 }
 
 .center {
