Trying to fix font-size MK10 Well f*%k

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -115,9 +115,16 @@ li {
 .bottomItem {
     font-size: x-large;
     color: white;
-/*    float: left;*/
+    font-family: "HelveticaNeue";
+    padding-top: 2%;
+    padding-left: 5%;
+    /*
+    font-size: x-large;
+    color: white;
+    float: left;
     font-family: "HelveticaNeue";
     padding-right: 8%;
+*/
 }
 
 .center {
