Trying to fix font-size MK11 One more try

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -102,10 +102,11 @@ li {
 
 
 .bottom {
+/*
     margin-top: 5%;
     background-color: black;
-    overflow: auto;
     padding: 2%;
+*/
 }
 
 #bottom li {
