Trying to fix font-size MK13 And its smaller again

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -103,9 +103,9 @@ li {
 
 .bottom {
 
-    margin-top: 5%;
+/*    margin-top: 5%;*/
     background-color: black;
-    padding: 2%;
+/*    padding: 2%;*/
 }
 
 #bottom li {
