--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -102,10 +102,9 @@ li {
 
 
 .bottom {
-
-/*    margin-top: 5%;*/
+    width: 100%;
+    margin-top: 5%;
     background-color: black;
-/*    padding: 2%;*/
 }
 
 #bottom li {
@@ -115,10 +114,12 @@ li {
 .bottomItem {
     font-size: x-large;
     color: white;
-    font-family: "HelveticaNeue";
-    padding-top: 2%;
-    padding-left: 5%;
-    float: left;
+    font-family: "HelveticaNeue-light";
+    width: 25%;
+    margin-top: 10%;
+    margin-bottom: 25%;
+    text-align: center;
+    
     /*
     font-size: x-large;
     color: white;
