--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -112,7 +112,7 @@ li {
     margin-right: 2%;
 }
 .bottomItem {
-    font-size: x-large;
+    font-size: 500px;
     color: white;
     font-family: "HelveticaNeue-light";
     width: 25%;
