MK 18: I feel like something is wrong with the scaling

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -112,7 +112,7 @@ li {
     margin-right: 2%;
 }
 .bottomItem {
-    font-size: 30px;
+    font-size: 200%;
     color: white;
     font-family: "HelveticaNeue-light";
     width: 25%;
