If no bugs fsWP is finished

--- a/fsWP/Style.css
+++ b/fsWP/Style.css
@@ -4,6 +4,12 @@ body {
     font-family: "Helvetica";
 }
 
+a{
+    color: inherit;
+    text-decoration: inherit;
+}
+
+
 @font-face {
     font-family: "HelveticaNeue";
     src: url(bestanden/HelveticaNeue.otf) format("truetype");
