--- a/bestanden/BasicTemplate.css
+++ b/bestanden/BasicTemplate.css
@@ -1,8 +1,4 @@
-body {
-	background-color: #D1D1D1;
-	padding: 0px;
-	margin: 0px;
-}
+
 
 h1{
 	color: 	rgb(75,0,0);
@@ -25,10 +21,10 @@ a{
 	background-color: rgb(180,0,0);
     height: 10%;
 	width: 100%;
-/*	position: fixed;*/
+	position: fixed;
 	top: 0px;
 	overflow: auto;
-    box-shadow: 0px 1px 1px #191919;
+    box-shadow: 0px 2px 2px #191919;
 }
 
 .headertekst{
