--- a/bestanden/CurrentTemplate.css
+++ b/bestanden/CurrentTemplate.css
@@ -17,166 +17,60 @@
   src: local('Source Sans Pro Black'), local('SourceSansPro-Black'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v7/toadOcfmlt9b38dHJxOBGHiec-hVyr2k4iOzEQsW1iE.woff) format('woff');
 }
 
+body {
+	background-color: #D1D1D1;
+	padding: 0px;
+	margin: 0px;
+}
+
+table{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    border-image-width: 0;
+    border-collapse:collapse;
+}
+
+td {
+    padding: 0;
+}
+
 
 .header{
-    margin-top: 3%;	
+    margin-top: 0%;	
 }
 
 .titel{
-    margin-top: 3%;
+    margin-top: 15%;
     background-color: black;
-    padding: 2;%
+    padding: 1%;
 }
-
-
 
 .titeltekst{
-    font-size: 200%;
-    border-bottom: 0pt;
-    padding: 7%;
+    font-size: 700%;
+    color: #5f5f5f;
+	text-align: center;
+	font-family: 'Source Sans Pro';
+	font-weight: 800;
 }
-
-
-
-.titelimg{
-	margin-top: 4%;
-    margin-right: 3%;
-	width: 40%;
-	float: right;
-}
-
-
 
 .ondertitel{
-	
-    font-size: 20pt;
+    margin-top: 1%;
+    font-size: 15pt;
 	font-family: Source Sans Pro;
-	margin-left: auto;
-    margin-right: auto;
-	padding-right: 10%;
     text-align: center;
-	
-
+    padding-left: 5%;
 }
-
 
 
 .content{
-	
 	height: 1600pt;
-	
-
 }
-
-
-
-
-#timeline{
-	
-    height: 1600pt;
-	
-    width: 1%;
-	
-    background-color:white;
-	
-    float: left;
-	
-
-}
-
-
-
-#rightcontent {
-	
-    height: 100%;
-	
-    float: right;
-	
-    width: 49.5%;
-	
-
-}
-
-
-
-#leftcontent {
-	
-    height:100%;
-	
-    float: left;
-	
-    width: 49.5%;
-	
-
-}
-
-
-
-.r-balk{
-	
-    float: right;
-	
-
-}
-
-
-
-.l-balk{
-	
-    float: left;
-	
-
-}
-
-
-
-.balk{
-	
-    height: 0.5%;
-	
-    width: 45%;
-	
-    background-color:white;
-	
-    margin-top: 16%;
-	
-
-}
-
-
-
-.circle{
-	
-    position: relative;
-	
-    float: left;
-	
-    width: 180pt;
-	
-    height: 180pt;
-	
-    -webkit-border-radius: 90pt;
-	
-    -moz-border-radius: 90pt;
-	
-    border-radius: 90pt;
-	 
-    border-style: solid;
-	
-    border-color: white;
-	
-    border-width: 7px;
-	
-
-}
-
 
 
 .contentB{
 /*    From this point*/
-    margin-top: 4%;
-    margin-bottom: -4px;
-    width: 100%;
+    margin-top: 10%;
     border-collapse: collapse;
     overflow: hidden;
     vertical-align: top;
@@ -233,15 +127,9 @@
 
 
 #picture-Delft{
-	
     background-image: url(TuDelftLogo.png);
-	
     background-size: 10pt,10pt;
-	
     float: right;
-	
-    
-
 }
 
 
@@ -264,37 +152,7 @@
 
 
 
-.achernaam {
-	
-    padding-left: 30%;
-	
 
-}
-
-
-
-.naam {
-	
-    color: 	rgb(75,0,0);
-	
-	font-size: 267%;
-	
-	font-family: Georgia;
-	
-	margin-top: 3%;
-	
-    font-weight: 600;
-	
-
-}
-
-
-
-.voor {
-	
-    padding-left: 20%
-
-}
 
 
 
@@ -302,9 +160,9 @@
 	
     font-family: 'Source Sans Pro';
     font-weight: 400;
-    font-size: 30pt;
+    font-size: 50pt;
     margin-top: 5%;
-    vertical-align: top;
+/*    vertical-align: top;*/
 }
 
 #content2title {
@@ -331,6 +189,10 @@
     height: 35%;
     width: 100%;
     background-color: #C4C4C4;
+}
+
+.project:hover {
+    background-color: rgb(161, 150, 150);
 }
 
 .projectTitle {
@@ -372,7 +234,8 @@
 }
 
 .image {
-        height: 400px;  
+    height: 400px;
+    position: absolute;
 }
 
 
@@ -381,6 +244,9 @@
     background-color: white;
     color: black;
     text-align: right;
+    margin-bottom: 10%;
+    width: 100%;
+    height: 400px;
 }
 
 .block2T {
@@ -396,6 +262,7 @@
 .block1 {
     background-color:rgb(180,0,0);
     color: white;
+    height: 400px;
 }
 
 .block3 {
@@ -413,30 +280,12 @@
 
 .contentText {
     font-family: 'Source Sans Pro';
-    font-weight: 300;
-    margin-top: 5%;
+    font-weight: 500;
+    margin-top: 2%;
 }
-
-table{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    border-image-width: 0;
-    border-collapse:collapse;
-}
-
-.contentB tr td {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    border-image-width: 0;
-    border-collapse:collapse;
-
-}
-
 .noThing {
     margin: 0;
-    padding: -4;
+    padding: 0;
     border-image-width: 0;
     border-collapse:collapse;
     border-spacing: 0;
@@ -447,10 +296,38 @@ table{
     padding-right: 5%;
 }
 
-.cTr {
+
+
+
+
+.cTL {
     margin-left: 5%;
 }
 
-.top {
+.WhoAmI {
+    width:100%;
+}
+
+.cTr {
+        margin-left: 5%;
+}
+
+.contentBText {
+    position: absolute; 
     vertical-align: top;
+    height: 400px;
+    
+}
+
+#tdimg1 {
+}
+
+.fr {
+/*    float: right;*/
+    right:0;
+}
+
+.blok2Txt {
+    right: 0;
+    float: right;
 }
