--- a/bestanden/CurrentTemplate.css
+++ b/bestanden/CurrentTemplate.css
@@ -41,9 +41,13 @@ td {
 }
 
 .titel{
+/*
     margin-top: 15%;
     background-color: black;
     padding: 1%;
+*/
+    padding-top: 20%;
+    padding-bottom: 17%;
 }
 
 .titeltekst{
@@ -55,11 +59,11 @@ td {
 }
 
 .ondertitel{
-    margin-top: 1%;
     font-size: 15pt;
 	font-family: Source Sans Pro;
     text-align: center;
-    padding-left: 5%;
+    margin-left: 20%;
+    color: #5f5f5f;
 }
 
 
@@ -70,12 +74,39 @@ td {
 
 .contentB{
 /*    From this point*/
-    margin-top: 10%;
+    margin-top: 0%;
     border-collapse: collapse;
     overflow: hidden;
     vertical-align: top;
 }
 
+.block2 {
+    background-color: white;
+    color: black;
+    text-align: right;
+    margin-bottom: 10%;
+    width: 100%;
+    height: 400px;
+}
+
+.block2T {
+    margin-top: 10%;
+}
+
+.block1T {
+    vertical-align: top;
+
+}
+
+.block1 {
+    background-color:rgb(180,0,0);
+    color: white;
+    height: 400px;
+}
+
+.block3 {
+    text-align: center;
+}
 
 
 .content11{
@@ -192,7 +223,7 @@ td {
 }
 
 .project:hover {
-    background-color: rgb(161, 150, 150);
+    background-color: rgb(157, 157, 157);
 }
 
 .projectTitle {
@@ -240,34 +271,6 @@ td {
 
 
 
-.block2 {
-    background-color: white;
-    color: black;
-    text-align: right;
-    margin-bottom: 10%;
-    width: 100%;
-    height: 400px;
-}
-
-.block2T {
-    color: black;
-    vertical-align: top;
-}
-
-.block1T {
-    vertical-align: top;
-
-}
-
-.block1 {
-    background-color:rgb(180,0,0);
-    color: white;
-    height: 400px;
-}
-
-.block3 {
-    text-align: center;
-}
 
 .projectDescription {
     margin-left: 10%;
