--- a/bestanden/CurrentTemplate.css
+++ b/bestanden/CurrentTemplate.css
@@ -47,22 +47,27 @@ td {
     padding: 1%;
 */
     padding-top: 20%;
-    padding-bottom: 17%;
+    padding-bottom: 16%;
 }
 
 .titeltekst{
-    font-size: 700%;
-    color: #5f5f5f;
+    font-size: 600%;
+    color: #1f1f1f;
 	text-align: center;
-	font-family: 'Source Sans Pro';
+	font-family: 'Open Sans';
 	font-weight: 800;
+}
+
+.titelHoofd {
+    font-size: 130%;
 }
 
 .ondertitel{
     font-size: 15pt;
-	font-family: Source Sans Pro;
+	font-family: Cardo;
     text-align: center;
-    margin-left: 20%;
+    padding-top: 1%;
+    margin-left: 23%;
     color: #5f5f5f;
 }
 
@@ -206,16 +211,6 @@ td {
 }
 
 .project {
-/*
-    height: 280pt;
-    width: 280pt;
-    border-color: white;
-    border-style: solid;
-    border-width: 10pt;
-    float: left;
-    margin-right: 10%;
-*/
-    
     margin-top: 3%;
     height: 35%;
     width: 100%;
