--- a/uni/bestanden/CurrentTemplate.css
+++ b/uni/bestanden/CurrentTemplate.css
@@ -1,20 +1,32 @@
 /*DOCUMENT*/
+
+
+
+body {
+	background-color: white;
+	padding: 0px;
+	margin: 0px;
+}
+
+p {
+    font-family: 'Source Sans Pro';
+}
+
 .headerdoc{
     height: 5%;
 }
 
 #content{
-    background-color:white;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 5%;
+    padding-top: 3%;
     height: 60%;
     border: 2%
 }
 
 .folder{
     background-color: rgb(180,0,0);
-    font-family: 'Lato';
+
     height: 30%;
     margin-left: 3%;
     margin-top: 3%;
@@ -26,5 +38,4 @@
 .foldertext{
     margin-top:45%;
 }
-
 
