--- a/beta/css.css
+++ b/beta/css.css
@@ -19,12 +19,6 @@ body {
     padding: 0px;
     margin: 0px;
 }
-#background {
-    position: fixed;
-    top: 0px;
-    z-index: 1;
-    width: 100%;
-}
 #content {
     width: 100%;
     height: 110%;
@@ -52,9 +46,10 @@ body {
     font-family: Cardo;
 }
 #content2 {
-    padding-top: 3%;
+    margin-top: 10%;
     width: 100%;
-    margin-bottom: 2%;
+    margin-bottom: 10%;
+    /*    height: 700px;*/
 }
 #titleBox {
     margin-top: 30%;
@@ -67,10 +62,11 @@ h2 {
     font-size: 700%;
     margin-top: 0;
     margin-bottom: 0;
-    padding-bottom: 0;
-    padding-top: 3%;
+    padding-bottom: 1.7%;
+    padding-top: 0;
     width: 100%;
     text-align: center;
+    background-color: rgb(229, 226, 226)
 }
 .line {
     background-color: #B40000;
@@ -82,11 +78,10 @@ h2 {
 }
 .description {
     font-family: Source Sans Pro;
-    font-size: 125%;
-    margin-top: 4%;
-    margin-bottom: 0;
-    width: 100%;
-    text-align: center;
+    font-size: 175%;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    margin-left: 25%;
 }
 .phone {
     width: 30%;
@@ -95,10 +90,10 @@ h2 {
     margin-top: 10%;
 }
 #project1 {
+    margin-top: 0%;
     background-color: #B40000;
     width: 100%;
     height: 750px;
-    margin-top: 2%;
     overflow: hidden;
 }
 h3 {
@@ -119,7 +114,7 @@ h3 {
     font-family: open sans;
     font-size: 500%;
     color: white;
-    margin-top: 20%;
+    margin-top: 17%;
     margin-left: 10%;
 }
 #p2 {
@@ -132,7 +127,7 @@ h3 {
 .show2des {
     font-family: open sans;
     font-size: 2500%;
-/*    color: grey;*/
+    /*    color: grey;*/
     color: #B40000;
     padding-top: 19%;
     margin: 0;
@@ -168,15 +163,14 @@ h3 {
 }
 .socdesc {
     color: white;
-    top: 66%;
+    top: 73%;
     width: 100%;
     text-align: center;
     position: absolute;
     font-family: open sans;
     font-weight: 600;
-    font-size: 200%;;
+    font-size: 200%;
 }
-
 #disclaimer {
     text-align: center;
     margin-top: 10px;
@@ -184,7 +178,13 @@ h3 {
     bottom: 0;
     margin-bottom: 2px;
     width: 100%;
-    
     color: white;
     font-family: Open Sans;
+}
+.desBig {
+    font-size: 600%;
+}
+p {
+    margin: 0;
+    padding: 0;
 }
