--- a/beta/css.css
+++ b/beta/css.css
@@ -1,18 +1,14 @@
 /*DOCUMENT*/
 
 @font-face {
-    font-family: Raleway;
-    src: url("Roboto-Bold.ttf");
-}
-@font-face {
-    font-family: Raleway-Light;
-    src: url("Raleway-Light.ttf");
-}
-@font-face {
     font-family: 'SSB';
     font-style: normal;
     font-weight: 900;
     src: local('Source Sans Pro Black'), local('SourceSansPro-Black'), url(http://themes.googleusercontent.com/static/fonts/sourcesanspro/v7/toadOcfmlt9b38dHJxOBGHiec-hVyr2k4iOzEQsW1iE.woff) format('woff');
+}
+@font-face {
+    font-family: RBNo2Light;
+    src: url(bestanden/RBNo2Light.otf);
 }
 body {
     background-color: rgba(253, 251, 251, 1);
@@ -22,6 +18,17 @@ body {
 #content {
     width: 100%;
     height: 110%;
+}
+
+#imgc1 {
+    visibility: hidden;
+    width: 100%;
+}
+
+h3 {
+    font-family: RBNo2Light;
+    padding: 0;
+    margin: 0;
 }
 .relative {
     position: relative;
@@ -52,7 +59,6 @@ body {
 }
 #titleBox {
     margin-top: 30%;
-    /*    float: right;*/
     right: 0;
     background-color: white;
     padding: 3%;
@@ -97,10 +103,6 @@ h2 {
     width: 100%;
     overflow: hidden;
 }
-h3 {
-    padding: 0;
-    margin: 0;
-}
 .show1des {
     font-family: Source Sans Pro;
     font-size: 125%;
@@ -138,37 +140,40 @@ h3 {
 #social {
     background-color: rgb(172, 172, 172);
     position: relative;
+    overflow: auto;
 }
 .socitem {
-    margin-top: 100px;
-    /*    margin-left: 14%;*/
+    margin-bottom: 100px;
+    margin-left: 15%;
     float: left;
     width: 300px;
     height: 300px;
     background-color: white;
     border-radius: 50%;
-    position: relative;
     overflow: hidden;
 }
 .soccirc {
     background-color: #B40000;
     border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: relative;
+    height: "0%";
+    width: "0%";
+    top: "50%";
+    left: "50%";
 }
 .socimg {
     width: 150px;
     margin-left: 25%;
     margin-top: 25%;
-    position: absolute;
+/*    position: absolute;*/
 }
 .socdesc {
     color: white;
-    top: 73%;
-    width: 100%;
+    top: 45%;
+/*    width: 100%;*/
     text-align: center;
-    position: absolute;
+    position: relative;
+    visibility: collapse;
     font-family: open sans;
     font-weight: 600;
     font-size: 200%;
@@ -227,4 +232,8 @@ p {
     position: absolute;
     top:35%;
     right: 15%;
+}
+
+.socitems {
+    padding-top: 10%;
 }
