--- a/beta/css.css
+++ b/beta/css.css
@@ -23,6 +23,7 @@ body {
 #imgc1 {
     visibility: hidden;
     width: 100%;
+    margin-bottom: -10px;
 }
 
 h3 {
@@ -44,6 +45,14 @@ h3 {
     height: 100%;
     width: 100%;
 }
+#titleBox {
+    margin-top: 30%;
+    right: 0;
+    background-color: white;
+    padding: 3%;
+    position: fixed;
+    z-index: 0;
+}
 #name {
     font-family: open sans;
     font-size: 230%;
@@ -57,13 +66,14 @@ h3 {
     width: 100%;
     margin-bottom: 10%;
 }
-#titleBox {
-    margin-top: 30%;
-    right: 0;
-    background-color: white;
-    padding: 3%;
-    position: fixed;
-    z-index: 0;
+.description {
+    font-family: Source Sans Pro;
+    font-size: 175%;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
 }
 h2 {
     font-family: open sans;
@@ -84,13 +94,7 @@ h2 {
     margin-top: -1.7%;
     height: 5px;
 }
-.description {
-    font-family: Source Sans Pro;
-    font-size: 175%;
-    margin-top: 2%;
-    margin-bottom: 4%;
-    margin-left: 25%;
-}
+
 #phone {
     width: 30%;
     margin-right: 10%;
