--- a/beta/css.css
+++ b/beta/css.css
@@ -96,15 +96,17 @@ h2 {
 }
 
 #phone {
-    width: 30%;
     margin-right: 10%;
     float: right;
+    padding-left: 10%;
     margin-top: 10%;
+    z-index: 99;
 }
 #project1 {
     margin-top: 0%;
     background-color: #B40000;
     width: 100%;
+    height: 600px;
     overflow: hidden;
 }
 .show1des {
@@ -114,8 +116,9 @@ h2 {
     margin-left: 10%;
 }
 #project2 {
-    overflow: hidden;
-    position: relative;
+    overflow: auto;
+        padding-top: 5%;
+    padding-bottom: 5%;
 }
 #p1 {
     font-family: open sans;
@@ -123,20 +126,24 @@ h2 {
     color: white;
     margin-top: 17%;
     margin-left: 10%;
+    z-index: 9;
 }
 #p2 {
     font-family: open sans;
     font-size: 500%;
-    top: 25%;
-    right: 15%;
+    margin-right: 5%;
+    margin-top: 10%;
+}
+.title2 {
     position: absolute;
 }
+
 .show2des {
     font-family: open sans;
-    font-size: 300%;
+    font-size: 3em;
     color: grey;
-    margin-left: 6%;
-    margin-top: 13%;
+/*    margin-left: 6%;*/
+/*    margin-top: 13%;*/
 }
 .code {
     color: #B40000;
@@ -259,9 +266,8 @@ p {
 #p2under {
     font-family: Source Sans Pro;
     font-size: 125%;
-    position: absolute;
-    top:35%;
-    right: 15%;
+    margin-right: 5%;
+    margin-top: 0%;
 }
 
 .socitems {
