--- a/css.css
+++ b/css.css
@@ -45,7 +45,7 @@ h3 {
 }
 
 #content1 {
-    background-image: url(bestanden/wiebenik.JPG);
+    background-image: url(bestanden/wiebenik.jpeg);
     background-size: 100%;
     background-attachment: fixed;
     height: 100%;
