--- a/liam/files/css.css
+++ b/liam/files/css.css
@@ -24,6 +24,18 @@ div {
     overflow: hidden;
     pointer-events: none;
 }
+#background-player {
+    width: 100%;
+    height: 100%;
+}
+
+#confetti {
+    pointer-events: none;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    position: fixed;
+}
 
 #pageContainer {
     display: flex;
@@ -70,7 +82,7 @@ div {
     font-family: "Berkshire Swash";
     padding-top: 10px;
     padding-bottom: 10px;
-    color: white;    
+    color: white;
 }
 
 #ticket p {
@@ -86,13 +98,17 @@ div {
 
 #availability h1 {
     text-align: center;
-    font-family: "Berkshire Swash";    
+    font-family: "Berkshire Swash";
     color: white;
 }
 
 #availability embed{
     margin-left: auto;
     margin-right: auto;
+}
+
+#doodle {
+    min-width: 900px;
 }
 
 @media screen and (max-width: 900px)
